<resources>
    <string name="app_name">Messenger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="info_title">You can\'t send empty message</string>
</resources>